feat: persist extracted individuals after scene detection
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)